给project添加分页 给个人信息里的任务详情添加时间选择和添加备注

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,8 @@
         <activity
             android:name=".activity.Task"
             android:label="@string/task" />
+        <activity android:name=".activity.Project"
+            android:label="@string/project"/>
     </application>
 
 </manifest>
