Feedback Aboutus  调整字体  界面 接口

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
             android:label="@string/acc_dialog_ok" />
         <activity
             android:name=".activity.Feedback"
+            android:windowSoftInputMode="stateVisible"
             android:label="@string/feedback" />
         <activity
             android:name=".activity.AboutUs"
