--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
             android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".activity.AddTask"
-            android:label="@string/addtask" />
+            android:label="@string/add" />
+        <activity android:name=".activity.PublishTask"/>
         <activity
             android:name=".activity.Login"
             android:label="@string/login"
